SPBR-9: Fixed creating book